Update changelog and version xml files

--- a/PACModeS2020_changelog.htm
+++ b/PACModeS2020_changelog.htm
@@ -1,3 +1,9 @@
+<h3>V1.0.0.21 05 November 2020</h3>
+<p>
+	<ul>
+		<li>Added check for internet connection</li>
+	</ul>
+</p>
 <h3>V1.0.0.20 31 October 2020</h3>
 <p>
 	<ul>
