File updates only - no code changes

--- a/PACModeS2020_changelog.htm
+++ b/PACModeS2020_changelog.htm
@@ -1,4 +1,9 @@
-<h3>V1.0.0.21 05 November 2020</h3>
+<h3>V1.0.0.22 08 December 2020</h3>
+<p>
+	<ul>
+		<li>Added display of latest GFIA update applied</li>
+	</ul>
+</p><h3>V1.0.0.21 05 November 2020</h3>
 <p>
 	<ul>
 		<li>Added check for internet connection</li>
