--- a/PACModeS2020_changelog.htm
+++ b/PACModeS2020_changelog.htm
@@ -1,3 +1,9 @@
+<h3>V1.0.0.23 04 January 2021</h3>
+<p>
+	<ul>
+		<li>Updated dll's for Autoupdater and removed unnecessary SQLite.Core dll</li>
+	</ul>
+</p><h3>V1.0.0.21 05 November 2020</h3>
 <h3>V1.0.0.22 08 December 2020</h3>
 <p>
 	<ul>
